--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,34 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Pixiv User Filter",
-  "version": "2025.7.30",
-  "description": "Hides Pixiv recommendations from blacklisted users",
+  "version": "2025.8.3",
+  "description": "Hides Pixiv artworks of blacklisted users",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{5fb5b4a4-6485-4e28-bd6d-62837f0c7340}"
+    }
+  },
   "permissions": [
     "storage",
     "contextMenus",
-    "notifications"
+    "notifications",
+    "activeTab"
   ],
+  "host_permissions": [
+    "*://*.pixiv.net/*"
+  ],
+  "action": {
+    "default_title": "Pixiv User Filter"
+  },
+  "background": {
+    "scripts": ["contextMenu.js"]
+  },
   "content_scripts": [
     {
       "matches": ["*://*.pixiv.net/*"],
       "js": ["content.js"]
     }
   ],
-  "background": {
-    "scripts": ["contextMenu.js"],
-    "persistent": false
-  },
-  "browser_action": {
-    "default_area": "navbar",
-    "default_icon": {
-      "16": "icon.svg",
-      "32": "icon.svg",
-      "48": "icon.svg",
-      "64": "icon.svg",
-      "96": "icon.svg"
-    },
-    "default_title": "Pixiv User Filter"
-  },
   "options_ui": {
     "page": "options.html"
   },
