--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Pixiv User Filter",
-  "version": "2025.8.21",
+  "version": "2025.8.24",
   "description": "Hides Pixiv artworks of blacklisted users",
   "browser_specific_settings": {
     "gecko": {
@@ -26,7 +26,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.pixiv.net/*"],
-      "js": ["content.js"]
+      "js": ["thumbnailFixer.js", "content.js"]
     }
   ],
   "options_ui": {
