Add recommendation limiting feature
Introduces an option to limit the number of Pixiv recommendations via webRequest blocking, with UI controls in options.html and options.js. Updates background script logic, content script messaging, and manifest permissions to support this feature.

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,9 @@
     "storage",
     "contextMenus",
     "notifications",
-    "activeTab"
+    "activeTab",
+	"webRequest",
+	"webRequestBlocking"
   ],
   
   "host_permissions": [
@@ -29,7 +31,7 @@
   },
   
   "background": {
-    "scripts": ["contextMenu.js"]
+    "scripts": ["background.js"]
   },
   
   "content_scripts": [
